Fixed text overflow in profile name and description

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -23,6 +23,12 @@
   font-size: 32px;
   line-height: 1;
   color: #212121;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 80%;
 }
 
 .profile__description {
@@ -30,6 +36,12 @@
   font-size: 16px;
   line-height: 1;
   color: rgba(33, 33, 33, 0.7);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 80%;
 }
 
 .profile__edit-button {
